--- a/package.json
+++ b/package.json
@@ -1,28 +1,7 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
-  },
-  "author": "Afraz Ahmed",
-  "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "cloudinary": "^1.36.4",
-    "colors": "^1.4.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "express-async-handler": "^1.2.0",
-    "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
-    "express-upload": "^0.1.0",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.1.1",
-    "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.22"
+    "passport": "^0.6.0",
+    "passport-google-oauth2": "^0.2.0"
   }
 }
